--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,8 @@
 <h1>Créditos</h1>
 
 <p>
-    Esta práctica ha sido desarrollada por LeChuck.
+    Esta práctica ha sido desarrollada por Lucía Fiz Galende e Ignacio Guerra Lorenzana con  <a href="https://github.com/nachogl1996/quiz_2017">GitHub</a> .
 </p>
 
-<img src="/images/lechuck.jpg" />
-
+<img src="/images/lfizgal.jpg" height="200px"/>
+<img src="/images/nachogl.jpeg" height="200px"/>
