--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,49 +1,49 @@
-
 body {
-    font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
-    margin: 0;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 #page {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 2px auto;
-    padding: 0px;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 2px auto;
+  padding: 0px;
 }
 
 .main {
-    flex: 1 100%;
-    border: 1px solid #999;
-    padding: 2px;
-    margin: 1px;
-    background: #eee;
+  flex: 1 100%;
+  border: 3px black;
+  padding: 2px;
+  margin: 1px;
+  background: lightcyan;
 }
 
 #mainHeader {
-    text-align: center;
+  text-align: center;
 }
 
 #mainHeader h1 {
-    margin: 8px;
+  margin: 8px;
 }
 
 #mainNav {
-    text-align: center;
+  text-align: center;
 }
 
 #mainNav a {
-    margin: 0px 5px;
+  margin: 0px 5px;
 }
 
 #mainSection {
-    padding: 20px;
-    text-align: left;
+  padding: 20px;
+  text-align: left;
 }
 
 #mainFooter {
-    text-align: center;
+  text-align: center;
+  background: azure;
 }
 
 a {
-    color: #00B7FF;
+  color: #00B7FF;
 }
