--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Preguntas</title>
+    <title>QUIZ 2017</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel='stylesheet'
@@ -23,15 +23,18 @@
     <nav class="main" id="mainNav" role="navigation">
         <a href="/">Inicio</a>
         <a href="/author">Créditos</a>
+        <a href="/help"> Ayuda</a>
     </nav>
 
     <section class="main" id="mainSection">
-            <%- body %>
+        <%- body %>
     </section>
 
     <footer class="main" id="mainFooter">
-        <a href="http://es.wikipedia.org/wiki/Quiz">
-            ¿Qué es un Quiz?</a>
+        <p><a href="http://es.wikipedia.org/wiki/Quiz">
+            ¿Qué es un Quiz?</a> </p>
+
+        &copy; PRÁCTICA QUIZ 2017, LFG & IGL.
     </footer>
 </div>
 </body>
