--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,8 +28,44 @@
     </nav>
 
     <section class="main" id="mainSection">
+
+        <% if (messages.info) { %>
+        <article id='flashinfo'>
+            <h3>Información de interés:</h3>
+            <ul>
+                <% for (var i in messages.info) { %>
+                <li> <%= messages.info[i] %> </li>
+                <% } %>
+            </ul>
+        </article>
+        <% } %>
+
+        <% if (messages.success) { %>
+        <article id='flashsuccess'>
+            <h3>Tareas completadas con éxito:</h3>
+            <ul>
+                <% for (var i in messages.success) { %>
+                <li> <%= messages.success[i] %> </li>
+                <% } %>
+            </ul>
+        </article>
+        <% } %>
+
+        <% if (messages.error) { %>
+        <article id='flasherror'>
+            <h3>Errores encontrados:</h3>
+            <ul>
+                <% for (var i in messages.error) { %>
+                <li> <%= messages.error[i] %> </li>
+                <% } %>
+            </ul>
+        </article>
+        <% } %>
+
+
         <%- body %>
     </section>
+
 
     <footer class="main" id="mainFooter">
         <p><a href="http://es.wikipedia.org/wiki/Quiz">
