--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -64,6 +64,10 @@
 
 
         <%- body %>
+
+        <% if(locals.paginate_control) {%>
+        <%- paginate_control %>
+        <% } %>
     </section>
 
 
