--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,54 +1,54 @@
-
 body {
-    font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
-    margin: 0;
+  font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
 #page {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 2px auto;
-    padding: 0px;
+  display: flex;
+  flex-flow: row wrap;
+  margin: 2px auto;
+  padding: 0px;
 }
 
 .main {
-    flex: 1 100%;
-    border: 1px solid #999;
-    padding: 2px;
-    margin: 1px;
-    background: #eee;
+  flex: 1 100%;
+  border: 3px black;
+  padding: 2px;
+  margin: 1px;
+  background: lightcyan;
 }
 
 #mainHeader {
-    text-align: center;
+  text-align: center;
 }
 
 #mainHeader h1 {
-    margin: 8px;
+  margin: 8px;
 }
 
 #mainNav {
-    text-align: center;
+  text-align: center;
 }
 
 #mainNav a {
-    margin: 0px 5px;
+  margin: 0px 5px;
 }
 
 #mainSection {
-    padding: 20px;
-    text-align: left;
+  padding: 20px;
+  text-align: left;
 }
 
 #mainFooter {
-    text-align: center;
+  text-align: center;
+  background: azure;
 }
 
 a {
-    color: #00B7FF;
+  color: #00B7FF;
 }
+.rigth {
 
-.right {
     float: right;
 }
 
@@ -59,15 +59,14 @@ a {
 }
 
 .wideRow .itemNarrow {
-    flex: 0 auto;
-    margin: 0px 5px;
+     flex: 0 auto;
+     margin: 0px 5px;
 }
 
 .wideRow .itemWide {
     flex: 1 auto;
     margin: 0px 5px;
 }
-
 #flashinfo {
     width: auto;
     border: 2px solid blue;
@@ -147,8 +146,6 @@ a {
     font-size: 12px;
     list-style: square;
 }
-
-
 .pagination {
     padding-left: 0;
     margin: 15px 0px 0px 0px;
@@ -166,7 +163,7 @@ a {
     padding: 3px 7px;
     margin-left: -1px;
     line-height: 1.42857143;
-    color: #00B7FF;
+    color: #91fbe9;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #ddd;
