--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,9 @@
     <nav class="main" id="mainNav" role="navigation">
         <a href="/">Inicio</a>
         <a href="/quizzes">Preguntas</a>
+        <a href="/quizzes/randomplay">Jugar</a>
         <a href="/author">Créditos</a>
+        <a href="/help"> Ayuda</a>
     </nav>
 
     <section class="main" id="mainSection">
@@ -61,16 +63,20 @@
         </article>
         <% } %>
 
+
         <%- body %>
 
-        <% if (locals.paginate_control) { %>
+        <% if(locals.paginate_control) {%>
         <%- paginate_control %>
         <% } %>
     </section>
 
+
     <footer class="main" id="mainFooter">
-        <a href="http://es.wikipedia.org/wiki/Quiz">
-            ¿Qué es un Quiz?</a>
+        <p><a href="http://es.wikipedia.org/wiki/Quiz">
+            ¿Qué es un Quiz?</a> </p>
+
+        &copy; PRÁCTICA QUIZ 2017, LFG & IGL.
     </footer>
 </div>
 </body>
