--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
         <a href="/quizzes/randomplay">Jugar</a>
         <a href="/author">Créditos</a>
         <a href="/help"> Ayuda</a>
+        <a href="/users">Usuarios</a>
     </nav>
 
     <section class="main" id="mainSection">
