--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -5,7 +5,6 @@
     </form>
 </div>
 
-
 <h1>
     Preguntas:
 </h1>
@@ -16,6 +15,9 @@
     <tr>
         <td>
             <a href="/quizzes/<%= quiz.id %>/play"><%= quiz.question %></a>
+        </td>
+        <td colspan="2">
+            <small> (by <%= quiz.Author ? quiz.Author.username : "Anómino" %>) </small>
         </td>
         <td>
             <a href="/quizzes/<%= quiz.id %>"><button>ver</button></a>
