--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,9 @@
     <nav class="main" id="mainNav" role="navigation">
         <a href="/">Inicio</a>
         <a href="/quizzes">Preguntas</a>
+        <% if(session.user){%>
+        <a href="/users/<%= session.user.id %>/quizzes">Mis Preguntas</a>
+        <% } %>
         <a href="/quizzes/randomplay">Jugar</a>
         <a href="/author">Créditos</a>
         <a href="/help"> Ayuda</a>
