--- a/views/users/_form.ejs
+++ b/views/users/_form.ejs
@@ -39,9 +39,7 @@
 </ul>
 
 <div>
-    <a href="/">
-        <button type="button">Cancelar</button>
-    </a>
+    <a href="/goback"><button type="button">Cancelar</button></a>
 </div>
 
 <div>
