--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,7 +40,9 @@
         <a href="/quizzes/randomplay">Jugar</a>
         <a href="/author">Créditos</a>
         <a href="/help"> Ayuda</a>
-        <a href="/users">Usuarios</a>
+        <% if(session.user){%>
+            <a href="/users">Usuarios</a>
+        <% } %>
     </nav>
 
     <section class="main" id="mainSection">
