--- a/views/quizzes/index.ejs
+++ b/views/quizzes/index.ejs
@@ -6,7 +6,7 @@
 </div>
 
 <h1>
-    <%= title || "Preguntas"%>:
+    <%= title || "Preguntas" %>:
 </h1>
 
 <table>
@@ -19,6 +19,7 @@
         <td colspan="2">
             <small> (by <%= quiz.Author ? quiz.Author.username : "Anómino" %>) </small>
         </td>
+        <% if (session.user) { %>
         <td>
             <a href="/quizzes/<%= quiz.id %>"><button>ver</button></a>
         </td>
@@ -31,8 +32,11 @@
                 <button>borrar</button>
             </a>
         </td>
+        <% } %>
     </tr>
     <% } %>
 </table>
 
+<% if (session.user) { %>
 <a href="/quizzes/new"><button type="button">Crear pregunta</button></a>
+<% } %>
