--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -9,6 +9,7 @@
             <a href="/users/<%= users[i].id %>" ><%= users[i].username %></a>
             <%= users[i].isAdmin ? "(admin)" : "" %>
         </td>
+        <% if (session.user) { %>
         <td>
             <a href="/users/<%= users[i].id %>/edit"><button>editar</button></a>
         </td>
@@ -18,8 +19,12 @@
                 <button>borrar</button>
             </a>
         </td>
+        <%  } %>
     </tr>
     <%  } %>
 </table>
 
+
+<% if (session.user) { %>
 <a href="/users/new"><button type="button">Crear usuario</button></a>
+<%  } %>
