--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -11,18 +11,20 @@
     <li>Respuesta: <b><%= quiz.answer %></b></li>
 </ul>
 
-<a href="/quizzes"><button>volver</button></a>
+<a href="/goback"><button>volver</button></a>
 
 
 <h1>
     Pistas:
 </h1>
 
+<% if (session.user) { %>
 <% include ../tips/new %>
+<% } %>
 
 <% var tips = quiz.Tips; %>
 
 <% include ../tips/index %>
 
 
-<a href="/goback"><button>Volver</button></a>
+<a href="/quizzes"><button>Volver</button></a>
