--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -15,11 +15,11 @@
 
 </ul>
 
+<% if (session.user) { %>
 <p>
     <a href="/users/<%= user.id %>/edit">
         <button type="button"> Editar</button>
     </a>
-
     <a href="/users/<%= user.id %>?_method=DELETE">
         <button type="button"
                 onClick="return confirm('Borrar cuenta: <%= user.username %>');">
@@ -27,5 +27,6 @@
         </button>
     </a>
 </p>
+<% } %>
 
 <a href="/goback"><button type="button">Volver</button></a>
