--- a/views/quizzes/play.ejs
+++ b/views/quizzes/play.ejs
@@ -28,6 +28,8 @@
 <% } %>
 
 <% var tips = quiz.Tips; %>
+<% var quizId = quiz.id; %>
+<% var quizAuthorId = quiz.AuthorId; %>
 
 <% include ../tips/index %>
 
