--- a/views/quizzes/random_play.ejs
+++ b/views/quizzes/random_play.ejs
@@ -28,8 +28,10 @@
     Pistas:
 </h1>
 <% var tips = quiz.Tips; %>
+<% var quizId = quiz.id; %>
 
 <% include ../tips/index %>
+
 
 
 <a href="/quizzes"><button>Volver</button></a>
