--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -23,6 +23,8 @@
 <% } %>
 
 <% var tips = quiz.Tips; %>
+<% var quizId = quiz.id; %>
+<% var quizAuthorId = quiz.AuthorId; %>
 
 <% include ../tips/index %>
 
