--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -1,5 +1,14 @@
 <ul>
     <% for (var i in tips) { %>
-    <li> <%= tips[i].text %> </li>
+    <% var tip = tips[i]; %>
+    <li>
+        <% if (tip.accepted) { %>
+        <%= tip.text %>
+        <% } else if (session.user) { %>
+        <%= tip.text %>
+        <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT"><button>Aceptar</button></a>
+        <% } %>
+        <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
+    </li>
     <% } %>
 </ul>
