--- a/views/quizzes/random_play.ejs
+++ b/views/quizzes/random_play.ejs
@@ -29,6 +29,9 @@
 </h1>
 <% var tips = quiz.Tips; %>
 <% var quizId = quiz.id; %>
+<% var quizAuthorId = quiz.AuthorId; %>
+
+
 
 <% include ../tips/index %>
 
