--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -2,13 +2,20 @@
     <% for (var i in tips) { %>
     <% var tip = tips[i]; %>
     <li>
-        <% if (tip.accepted) { %>
+        <% var tipAuthorId = tip.Author; %>
+        <% if (tip.accepted ||
+                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id) || (tipAuthorId && tipAuthorId===session.user.id)))) { %>
         <%= tip.text %>
-        <% } else if (session.user) { %>
-        <%= tip.text %>
+        </span><small> (by<span id="autor"> <%= tip.Author ? tip.Author.username : "Anómino" %></span>)</small>
+        <% } %>
+        <% if (!tip.accepted &&
+                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
         <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT"><button>Aceptar</button></a>
         <% } %>
+        <% if ((session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)|| (tipAuthorId && tipAuthorId===session.user.id)))) { %>
         <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
+        <% } %>
     </li>
     <% } %>
+
 </ul>
