--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -4,7 +4,7 @@
     <li>
         <% var tipAuthorId = tip.Author; %>
         <% if (tip.accepted ||
-                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id) || (tipAuthorId && tipAuthorId===session.user.id)))) { %>
+                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id) || (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
         <%= tip.text %>
         </span><small> (by<span id="autor"> <%= tip.Author ? tip.Author.username : "Anómino" %></span>)</small>
         <% } %>
@@ -12,7 +12,7 @@
                 (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
         <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/accept?_method=PUT"><button>Aceptar</button></a>
         <% } %>
-        <% if ((session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)|| (tipAuthorId && tipAuthorId===session.user.id)))) { %>
+        <% if ((session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)|| (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
         <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE"><button>Borrar</button></a>
         <% } %>
     </li>
