--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -6,7 +6,7 @@
         <% if (tip.accepted ||
                 (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id) || (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
         <%= tip.text %>
-        </span><small> (by<span id="autor"> <%= tip.Author ? tip.Author.username : "Anómino" %></span>)</small>
+        <span id="autor"><%= tip.Author ? tip.Author.username : "Anómino" %></span>
         <% } %>
         <% if (!tip.accepted &&
                 (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)))) { %>
