--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -4,7 +4,8 @@
     <li>
         <% var tipAuthorId = tip.Author; %>
         <% if (tip.accepted ||
-                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id) || (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
+                (session.user && (session.user.isAdmin || (quizAuthorId && quizAuthorId === session.user.id)
+                || (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
         <span id="autor"><%= tip.Author ? tip.Author.username : "Anómino" %></span>
         <%= tip.text %>
 
