--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -8,7 +8,8 @@
                 || (tipAuthorId && tipAuthorId.id === session.user.id)))) { %>
 
         <%= tip.text %>
-        <span id="autor"> <%= tip.Author ? tip.Author.username : "Anómino" %></span>
+
+        <small> (by<span id="autor"> <%= tip.Author ? tip.Author.username : "Anómino" %></span>)</small>
 
         <% } %>
         <% if (!tip.accepted &&
